# guido

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  retrain_fixed.py  run_pipeline.py
config/: settings.py
docker/: Dockerfile.mlflow  nginx.conf
models_artifacts/TCGA-BRCA/: xgboost_clinical_model.joblib  xgboost_model.joblib
models_artifacts/TCGA-COAD/: xgboost_clinical_model.joblib  xgboost_model.joblib
models_artifacts/TCGA-GBM/: xgboost_clinical_model.joblib  xgboost_model.joblib
models_artifacts/TCGA-KICH/: xgboost_clinical_model.joblib  xgboost_model.joblib
models_artifacts/TCGA-KIRC/: xgboost_clinical_model.joblib  xgboost_model.joblib
models_artifacts/TCGA-KIRP/: xgboost_clinical_model.joblib  xgboost_model.joblib
models_artifacts/TCGA-LGG/: xgboost_model.joblib
models_artifacts/TCGA-LIHC/: xgboost_clinical_model.joblib  xgboost_model.joblib
models_artifacts/TCGA-LUAD/: xgboost_clinical_model.joblib  xgboost_model.joblib
models_artifacts/TCGA-LUSC/: xgboost_clinical_model.joblib  xgboost_model.joblib
models_artifacts/TCGA-PAAD/: xgboost_model.joblib
models_artifacts/TCGA-PRAD/: xgboost_clinical_model.joblib  xgboost_model.joblib
scripts/: download_and_train_xena.py  generate_patient_reports.py  generate_predictions_and_audit.py
tests/: test_api.py  test_data.py  test_llm.py  test_models.py  test_pipeline.py
ui/: .env.example  .env.production  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
(+92 files in other folders)
